--- a/package.json
+++ b/package.json
@@ -8,13 +8,16 @@
     "@fortawesome/free-regular-svg-icons": "^5.15.1",
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
     "@fortawesome/react-fontawesome": "^0.1.12",
+    "@reach/router": "^1.3.4",
     "@testing-library/jest-dom": "^5.11.5",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "emailjs-com": "^2.6.4",
+    "firebase": "^8.1.2",
     "react": "^17.0.1",
     "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-dom": "^17.0.1",
+    "react-dotenv": "^0.1.2",
     "react-hook-form": "^6.11.4",
     "react-rotating-text": "^1.4.1",
     "react-scripts": "4.0.0",
