Added favicon, updated npm

--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "react-dotenv": "^0.1.2",
     "react-hook-form": "^6.11.4",
     "react-rotating-text": "^1.4.1",
-    "react-scripts": "4.0.0",
+    "react-scripts": "^4.0.3",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
