--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "default_app",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://jamestinker.me",
+  "homepage": "https://t15digitalmedia.gihub.io/James-Showcase-Site",
   "dependencies": {
+    "-": "^0.0.1",
     "@fortawesome/fontawesome-svg-core": "^1.2.32",
     "@fortawesome/free-brands-svg-icons": "^5.15.1",
     "@fortawesome/free-regular-svg-icons": "^5.15.1",
@@ -14,6 +15,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "emailjs-com": "^2.6.4",
+    "gh-pages": "^3.2.3",
     "react": "^17.0.1",
     "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-dom": "^17.0.1",
@@ -21,10 +23,13 @@
     "react-hook-form": "^6.11.4",
     "react-rotating-text": "^1.4.1",
     "react-scripts": "^4.0.3",
+    "save-dev": "^0.0.1-security",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
